feat: exposed invoice accounting endpoint to facilitate refund on btcpayserver app project (#6818)
* feat: exposed invoice accounting endpoint to facilitate refund on btcpayserver app project

* merge from master

* refactor: optimizations

* refactor: added documentation, test assertions and renamed endpoint

* refactor: updated documentation based on code rabbit improvement suggestions

* refactor: updated refund properties terminology
