# BTCPayServer/wwwroot/swagger/v1/swagger.template.invoices.json
@@ -399,6 +399,53 @@
                 ]
             }
         },
+        "/api/v1/stores/{storeId}/invoices/{invoiceId}/refund/{paymentMethodId}": {
+            "get": {
+                "tags": [
+                    "Invoices"
+                ],
+                "summary": "Get invoice refund trigger data",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/StoreId"
+                    },
+                    {
+                        "$ref": "#/components/parameters/InvoiceId"
+                    },
+                    {
+                        "$ref": "#/components/parameters/PaymentMethodId"
+                    }
+                ],
+                "description": "View calculated refund amounts (payment then/now, invoice, overpaid) for the specified invoice/payment-method. This can be used preceding the POST /refund call.",
+                "operationId": "Invoices_GetInvoiceRefundTriggerData",
+                "responses": {
+                    "200": {
+                        "description": "specified invoice refund trigger data",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/InvoiceRefundTriggerData"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "If you are authenticated but forbidden to view the specified invoice"
+                    },
+                    "404": {
+                        "description": "The key is not found for this invoice"
+                    }
+                },
+                "security": [
+                    {
+                        "API_Key": [
+                            "btcpay.store.cancreatepullpayments"
+                        ],
+                        "Basic": []
+                    }
+                ]
+            }
+        },
         "/api/v1/stores/{storeId}/invoices/{invoiceId}/status": {
             "post": {
                 "tags": [
@@ -1072,6 +1119,55 @@
                 "properties": {
                     "metadata": {
                         "$ref": "#/components/schemas/InvoiceMetadata"
+                    }
+                }
+            },
+            "InvoiceRefundTriggerData": {
+                "type": "object",
+                "additionalProperties": false,
+                "properties": {
+                    "paymentAmountThen": {
+                        "type": "string",
+                        "format": "decimal",
+                        "description": "The amount in crypto at the time the invoice was paid.",
+                        "example": "5.00"
+                    },
+                    "paymentAmountNow": {
+                        "type": "string",
+                        "format": "decimal",
+                        "description": "The current amount in crypto.",
+                        "example": "5.00"
+                    },
+                    "invoiceAmount": {
+                        "type": "string",
+                        "format": "decimal",
+                        "description": "The fiat amount at the rate when the refund will be sent.",
+                        "example": "5.00"
+                    },
+                    "paymentCurrency": {
+                        "type": "string",
+                        "description": "The crypto currency of the invoice",
+                        "example": "BTC"
+                    },
+                    "paymentCurrencyDivisibility": {
+                        "type": "number",
+                        "description": "The maximum divisibility supported by the crypto currency of the invoice"
+                    },
+                    "invoiceCurrencyDivisibility": {
+                        "type": "number",
+                        "description": "The maximum divisibility supported by the fiat currency of the invoice"
+                    },
+                    "invoiceCurrency": {
+                        "type": "string",
+                        "description": "The fiat currency of the invoice",
+                        "example": "USD"
+                    },
+                    "overpaidPaymentAmount": {
+                        "type": "string",
+                        "format": "decimal",
+                        "nullable": true,
+                        "description": "The amount by which the invoice is overpaid",
+                        "example": "2.00"
                     }
                 }
             },
